specifically mention pycollada

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # to create release archive for «tag», use command
 #
-#     zip-dist -m MANIFEST.in collada_importexport «tag»
+#     zip-dist -m MANIFEST.in pycollada_importexport «tag»
 #
 # where zip-dist comes from <https://github.com/ldo/git-useful>
 
